--- a/index.html
+++ b/index.html
@@ -14,47 +14,183 @@ Select ONE Additional Feature to Add
 
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Why you should get the TRUNK MONKEY</title>
+    <meta charset="utf-8" />
+    <style>
+      h1,
+      h2,
+      ol,
+      li,
+      th,
+      td,
+      p,
+      h6 {
+        background-color: white;
+        width: 350px;
+        margin: auto;
+      }
+      h6.terms {
+        background-color: white;
+      }
 
-<head>
-  <title>Project: Recipe book</title>
-  <meta charset="utf-8">
-  <style>
-  </style>
-</head>
+      h1#title {
+        font-family: Cursive;
+        background-color: white;
+        width: 650px;
+        margin: auto;
+      }
+      h2#myname {
+        font-family: Verdana;
+        background-color: white;
+        width: 350px;
+        margin: auto;
+      }
 
-<body>
+      body {
+        background-image: url("https://steamuserimages-a.akamaihd.net/ugc/2010343007857977183/90BADEFC7A7BD280DCADFFA3C4CB574C444D215D/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false");
+        background-repeat: repeat;
+        text-align: center;
+        font-family: Cursive;
+      }
+    </style>
+  </head>
 
-  <h1>____'s Recipe Book</h1>
+  <body>
+    <h1 id="title">
+      Why you should get the <strong><em>Trunk Monkey</em></strong>
+    </h1>
 
-  <h2>Contents:</h2>
+    <h2 id="myname">By Matthew Otero</h2>
+<center>
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </center>
+    <h2>Contents:</h2>
 
-  <ol>
-    <li><a href="?">Recipe #1</a></li>
-  </ol>
-
-  <h2 id="?">Recipe #1</h2>
-
-  <ul>
-    <li>Time: _</li>
-    <li>Serves: _</li>
-  </ul>
-
-  <table>
-    <thead>
-      <tr>
-        <th>Ingredients</th>
-        <th>Quantity</th>
-      </tr>
-    </thead>
-    <tbody>
-    </tbody>
-  </table>
-
-  <p><strong>Step 1:</strong> Do something.
-  </p>
-
-  <p><em>Source: <a href="?">Some recipes websites</a></em></p>
-
-</body>
-
+    <ol>
+      <li>
+        <a href="#procon">What are the Pros and Cons of Having Truck Monkey?</a>
+      </li>
+      <li><a href="#get">How could I get Trunk Monkey?</a></li>
+    </ol>
+    <img src="https://media.istockphoto.com/id/117148436/photo/monkey-communication.jpg?s=612x612&w=0&k=20&c=mkx8z6wshhgRg3VNmrKKzBdJB_BKwo7kcr7OC4DwCgw=" width="500">
+<center>
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </center>
+    <h2 id="procon">What are the Pros and Cons of Having Truck Monkey?</h2>
+    <center>
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </center>
+    <center>
+      <table>
+        <thead>
+          <tr>
+            <th>Pros</th>
+            <th>Cons</th>
+          </tr>
+        </thead>
+        <tbody>
+          <td>Good For Security</td>
+          <td>ALOT of Money</td>
+        </tbody>
+        <tbody>
+          <td>The Monkey Is Funny</td>
+          <td>One Monkey Per Car</td>
+        </tbody>
+        <tbody>
+          <td>Monkey lives forever with forever shot</td>
+          <td>Every 5 years retake shot but alot of money</td>
+        </tbody>
+      </table>
+      <center>
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </center>
+    </center>
+    <h2 id="get">How Can I get Trunk Monkey?</h2>
+    <p><strong>Step 1:</strong> Have a lot of MONEY</p>
+    <p><strong>Step 2:</strong> Go to a Subaru Auto Group Home</p>
+    <p><strong>Step 3:</strong> Ask for a Trunk Monkey</p>
+    <p><strong>Step 4:</strong> Put Trunk Monkey in Trunk</p>
+    <p><strong>Step 5:</strong> Give Monkey Bannana</p>
+    <p><strong>Step 6:</strong> Be Happy because of Tunk Monkey</p>
+    <center>
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </center>
+      <h2>
+      <em
+        >Source:
+        <a href="https://youtu.be/AidAXgq9dWc"
+          >Click this Link for Trunk Monkey Comercial</a
+        ></em
+      >
+      <em
+        >Source:
+        <a href="https://youtu.be/XfqOB4hvxlY"
+          >Click this Link for a Day in The Life of Some of Our Monkeys</a
+        ></em
+      >
+    </h2>
+    <center>
+      <table>
+        <thead>
+          <tr>
+            <th></th>
+            <th></th>
+          </tr>
+        </thead>
+        <tbody></tbody>
+      </table>
+    </center>
+    
+    <p>Terms [&] Conditions</p>
+    <h6>
+      Trunk Monkey is not responsible for any costs arising out of any bodily
+      injury or property damage sustained or possible death through my
+      participation in normal or unusual acts.
+    </h6>
+  </body>
 </html>
+<h2>
+  Our Founder
+</h2>
+<img src="https://img.freepik.com/premium-photo/monkey-wearing-suit-tie-is-sitting-table_68339-677.jpg">
